[package]
name = "redis_resp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5.0"
serde = {version = "1.0", optional = true}

[dev-dependencies]
serde_bytes = {version = "0.11.9"}


[features]
# The dep: syntax is only available starting with Rust 1.60. Previous versions can only use the implicit feature name.
serde = ["dep:serde"]
