[package]
name = "redis_resp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5.0"
num-bigint = "0.4"
ordered-float = "3.4"
serde = {version = "1.0", optional = true}
im = {version = "15.1"}
# im = {version = "15.1", features = ["proptest"]}
proptest = {version = "1.1", optional = true}
proptest-derive = {version = "0.3", optional = true}

[dev-dependencies]
serde_bytes = {version = "0.11.9"}
im = {version = "15.1", features = ["proptest"]}

[features]
# The dep: syntax is only available starting with Rust 1.60. Previous versions can only use the implicit feature name.
serde = ["dep:serde"]
proptest = ["dep:proptest", "dep:proptest-derive", "im/proptest"]
